# papersketch

./: README.md  package.json  pyproject.toml  requirements.txt
app/: app.json  main.py
app/widgets/: summary_viewer.py
scripts/: build_widget_html.py
src/papersketch/: __init__.py  client.py  config.py  export_image.py  export_pdf.py  server.py  tools.py
src/papersketch/assets/: papersketch-inline.html
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  openai.d.ts
ui/src/components/: PaperSketchInlineCard.tsx
ui/src/lib/: composeSketch.ts  composeSketchFromMarkdown.ts  parsePaperSketch.ts
